--- a/todo-app-client/package.json
+++ b/todo-app-client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^1.1.36",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.2.1",
     "react": "^16.9.0",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.9.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
